:robot: Improve release automation and changelog generation

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,10 +33,9 @@ commit_version_number=true
 changelog_file=/CHANGELOG.md
 # Comma-separated list of sections to display in the changelog. They will be
 # displayed in the order they are given. The available options depend on the commit
-# parser used.
-changelog_sections=feature,fix,breaking,documentation,performance
+# parser used. We choose all possible emojis but none of the angular options, which
+# we assume to be used in the upstream repositories. This assures we keep control
+# over our changelog.
+changelog_sections=:boom:,:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with_upwards_trend:,:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:,
 # A comma-separated list of the import paths of components to include in the changelog.
 changelog_components=semantic_release.changelog.changelog_headers,semantic_release.changelog.compare_url
-
-[rstcheck]
-ignore_messages=(No directive entry for "automodule" in module "docutils.parsers.rst.languages.en"\.$)
