Revert one an unwanted change in _python-semantic-release_ settings in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -21,8 +21,10 @@ minor_emoji=:sparkles:,:children_crossing:,:lipstick:,:iphone:,:egg:,:chart_with
 patch_emoji=:ambulance:,:lock:,:bug:,:zap:,:goal_net:,:alien:,:wheelchair:,:speech_balloon:,:mag:,:apple:,:penguin:,:checkered_flag:,:robot:,:green_apple:
 # If set to false the pypi uploading will be disabled.
 upload_to_pypi=false
-# If set to false, do not upload distributions to GitHub releases.
-upload_to_release=true
+# If set to false, do not upload distributions to GitHub releases. This does actually
+# only correspond to the bdist wheel version of a release. The GitHub release will be
+# created anyway.
+upload_to_release=false
 # The branch to run releases from.
 branch=master
 # The name of your hvcs. Currently only GitHub and GitLab are supported.
