--- a/requirements.in
+++ b/requirements.in
@@ -1,12 +1,19 @@
--r agentMET4FOF/requirements.txt
--r tutorials/agentMET4FOF_anomaly_detection/requirements.in
--r tutorials/agentMET4FOF_anomaly_detection/dev-requirements.in
--r tutorials/agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
--r tutorials/agentMET4FOF_ml/requirements.txt
--r tutorials/agentMET4FOF_ZeMA_emc/requirements.in
--r PyDynamic/requirements/dev-requirements.in
--r tutorials/ZeMA-machine-learning-tutorials/requirements.txt
--r ZeMA_testbed_Bayesian_machine_learning/requirements.in
--r tutorials/agentMET4FOF_sensors/requirements.in
--r time-series-metadata/requirements/dev-requirements.in
--r time-series-buffer/requirements.txt
+-e agentMET4FOF
+-c agentMET4FOF/dev-requirements.in
+-e Met4FoF-redundancy
+-e PyDynamic
+-c PyDynamic/requirements/dev-requirements.in
+-e time-series-buffer
+-e time-series-metadata
+-c time-series-metadata/requirements/dev-requirements.in
+-c tutorials/agentMET4FOF_anomaly_detection/requirements.in
+-c tutorials/agentMET4FOF_anomaly_detection/dev-requirements.in
+-c tutorials/agentMET4FOF_bayesian_neural_network_ZeMA/requirements.txt
+-c tutorials/agentMET4FOF_ml/requirements.txt
+-c tutorials/agentMET4FOF_sensors/requirements.in
+-c tutorials/agentMET4FOF_ZeMA_emc/requirements.in
+-c tutorials/agentMET4FOF_ZeMA_emc/dev-requirements.in
+-c tutorials/PyDynamic_tutorials/requirements/requirements.in
+-c tutorials/PyDynamic_tutorials/requirements/requirements-dev.in
+-c tutorials/ZeMA-machine-learning-tutorials/requirements.txt
+-c ZeMA_testbed_Bayesian_machine_learning/requirements.in
