--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,7 @@ workflows:
       - test_time-series-buffer
       - test_time-series-metadata
       - test_agentMET4FOF_sensors
-      - test_Met4FoF_redundancy
+      - test_Met4FoF-redundancy
       - preview_release:
           # Test the 'release' job to avoid trouble when Pull Requests get merged and
           # to preview publishing actions and the new changelog.
@@ -96,7 +96,7 @@ workflows:
               - test_time-series-buffer
               - test_time-series-metadata
               - test_agentMET4FOF_sensors
-              - test_Met4FoF_redundancy
+              - test_Met4FoF-redundancy
       - confirm_previewed_release_actions:
           # This job allows for checking that the release we will create in the
           # next step actually is the desired release, by observing the result of
