--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,6 +136,7 @@ commands:
           python3 -m venv venv
           source venv/bin/activate
           pip install --upgrade pip pip-tools
+          pip install --upgrade numpy scipy uncertainties
           pip-sync dev-requirements.txt requirements.txt
 
     - save_cache:
