--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,12 @@
 name: Met4FoF_Code
 channels:
     - defaults
+    - conda-forge
 dependencies:
-    - python = 3.8.2
+    - python >= 3.8
     - numpy
+    - scipy
+    - uncertainties
     # pip dependencies have to be provided in `requirements.txt` syntax
     - pip:
         - -r dev-requirements.txt
